[package]
name = "tarkov-puzzles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
time = "0.3.30"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.193", features = ["derive"] }
